# make-style-dataset

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HLE803_STATUS.md  Makefile  README-ru.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  security.yml
cloud/: README.md  cmcstyle_flux_cloud.yaml  provision_and_train.sh
docs/: USER_GUIDE-ru.md  USER_GUIDE.md  index.md
docs/architecture/: SYSTEM.md  WORKSPACE.md
docs/development/: DEVELOPMENT_STANDARD.md  WSL_DEV.md
docs/features/: style-lora-cmcstyle-ru.md  style-lora-cmcstyle.md
scripts/: cmcstyle_everyday.json  eval_style_lora.py  setup.sh  train_cmcstyle_aitk.sh
src/make_style_dataset/: __init__.py  cli.py  config.py  media.py  onboarding.py  pipeline.py  proxy.py  vlm_caption.py  workspace.py
src/make_style_dataset/observability/: __init__.py  sentry.py
src/make_style_dataset/stages/: __init__.py  base.py  bubbles.py  caption.py  clean.py  inpaint.py  panels.py  train.py
src/make_style_dataset/ui/: __init__.py  app.py  service.py
tests/: conftest.py
tests/integration/: test_bubbles_masking.py  test_caption_kohya.py  test_clean_dedup.py  test_inpaint_masking.py  test_panels_slicing.py  test_smoke.py
tests/unit/: test_bubbles.py  test_caption.py  test_clean.py  test_config.py  test_inpaint.py  test_media.py  test_onboarding.py  test_panels.py  test_pipeline.py  test_sentry.py  test_stages.py  test_train.py  test_ui_service.py  test_vlm_caption.py  test_workspace.py
