[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "make-style-dataset"
version = "0.3.0"
description = "Comic pages -> kohya-ready style LoRA dataset pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergey Khlebnikov", email = "hleserg@gmail.com" }]
keywords = ["comics", "dataset", "lora", "kohya", "stable-diffusion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.11",
    "pyright>=1.1.380",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "commitizen>=3.27",
]

[project.urls]
Homepage = "https://github.com/hleserg/make-style-dataset"
Repository = "https://github.com/hleserg/make-style-dataset"
Issues = "https://github.com/hleserg/make-style-dataset/issues"

[project.scripts]
make-style-dataset = "make_style_dataset.cli:main"

[dependency-groups]
# GPU/ML stack for the model stages (S2 bubbles now; S3 inpaint, S5 caption
# later). Deliberately a PEP 735 dependency-group, NOT a
# [project.optional-dependencies] extra: the documented `uv sync --all-extras`
# (CI and fresh-clone setup) installs extras but NOT groups, so the CPU-only
# stages and the `make check` gate stay fast and `pip-audit` never scans this
# heavy tree. Install locally with `uv sync --group gpu`. The group is still
# resolved and pinned in uv.lock across every platform.
gpu = [
    "torch>=2.7",
    "torchvision>=0.22",
    "ultralytics>=8.3",
    "easyocr>=1.7",
    "huggingface-hub>=0.24",
    # S3 inpaint runs LaMa via ONNX (torch-free). onnxruntime-gpu has no macOS
    # wheels, so fall back to the CPU build there to keep `uv lock` resolvable.
    "onnxruntime-gpu>=1.19 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "onnxruntime>=1.19 ; sys_platform == 'darwin'",
]

# CUDA wheels for torch/torchvision. cu128 carries Blackwell (sm_120, RTX 50xx)
# kernels — verified on this box's GPU (capability 12.0, arch_list includes
# sm_120). `explicit = true` means this index is used ONLY for packages mapped
# to it in [tool.uv.sources]; everything else still resolves from PyPI.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Pull torch/torchvision from the CUDA index on Linux/Windows only. macOS has no
# CUDA wheels; with no marker match there, resolution falls back to the PyPI CPU
# build, which keeps `uv lock` resolvable on every platform (OS-agnostic).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/make_style_dataset"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["make_style_dataset"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests (may touch external services)",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/make_style_dataset"]
omit = ["src/make_style_dataset/cli.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = ["pyproject.toml:version", "src/make_style_dataset/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
